# rustntp

./: .gitignore  Cargo.toml
scripts/: generate-keys.sh  port-forward.sh  run-client.sh  run-ntp.sh  run-ntske.sh  systime-permission.sh
src/: lib.rs
src/client/: builder.rs  command.rs  config.rs  connection.rs  execution.rs  handler.rs  main.rs  ntske.rs  response.rs  tls.rs
src/common/: error.rs  establishment.rs  helper.rs  helpers.rs  lib.rs  packet.rs  protocol.rs  support.rs  systime.rs  tcp.rs
src/ntp/: config.rs  handler.rs  main.rs  server.rs  sync.rs  timeprovider.rs
src/ntske/: client_handler.rs  decoder.rs  main.rs
