[package]
name = "rustntp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ntske"
path = "src/ntske/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[lib]
name = "rustntp"
path = "src/common/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.13.0", features = [ "full", "rt-multi-thread" ] }
argh = "0.1"
tokio-rustls = "0.23"
rustls = "0.20"
rustls-pemfile = "0.2.1"
tracing = "0.1"
tracing-subscriber = { version = "0.2", default-features = false, features = ["fmt", "ansi", "env-filter", "chrono", "tracing-log"] }
webpki = "0.22"
webpki-roots = "0.22"
thiserror = "1.0"
toml = "0.5"
serde = { version = "1.0", features = ["derive"]}
threadpool = "1.8.1"